MutationObserver doesn't observe style attribute change when resizing element https://bugs.webkit.org/show_bug.cgi?id=266846 rdar://120109181

Reviewed by Antti Koivisto.

RenderLayer::resize() did not use a StyleAttributeMutationScope and as
such style attribute changes would not be enqueued to mutation
observers.

Thanks to Antti for highlighting the likely fix.

* LayoutTests/fast/css/resize-mutation-observer-expected.txt: Added.
* LayoutTests/fast/css/resize-mutation-observer.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::resize):

Canonical link: https://commits.webkit.org/287833@main